# USRecessionOdds

./: .gitignore  CHANGELOG.md  README.md  deep-research-report.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  realtime.yaml  series_registry.yaml
data/processed/: monthly_panel.csv  monthly_panel.metadata.json  monthly_panel.parquet  monthly_panel_realtime.csv  monthly_panel_realtime.metadata.json  monthly_panel_realtime.parquet
data/raw/: AMTMNO.csv  AMTMNO.metadata.json  BAMLH0A0HYM2.metadata.json  DGS10.metadata.json  DTB3.csv  DTB3.metadata.json  PAYEMS.metadata.json  SPASTT01USM661N.csv  SPASTT01USM661N.metadata.json  UNRATE.metadata.json  USALOLITOAASTSAM.csv  USALOLITOAASTSAM.metadata.json
data/reference/: nber_chronology.csv
data/vintages/: PAYEMS.csv  PAYEMS.metadata.json  UNRATE.csv  UNRATE.metadata.json  USALOLITOAASTSAM.csv  USALOLITOAASTSAM.metadata.json
docs/: IMPLEMENTATION_SPEC.md  data_dictionary.md  modeling_notes.md  open_source_backlog.md  realtime_backtesting.md  release_checklist.md
examples/: recession_monitoring_walkthrough.ipynb
outputs/backtests/: baseline_episode_summary.csv  baseline_event_scorecard.csv  baseline_threshold_analysis.csv  expanded_episode_summary.csv  expanded_event_scorecard.csv  expanded_metrics.csv  expanded_metrics_realtime.csv  expanded_model_summary.csv  expanded_model_summary_realtime.csv  expanded_predictions.csv  expanded_predictions_realtime.csv  expanded_realtime_episode_summary.csv  expanded_realtime_event_scorecard.csv  expanded_realtime_threshold_analysis.csv  expanded_threshold_analysis.csv  realtime_episode_summary.csv  realtime_event_scorecard.csv  realtime_metrics.csv  (+2 more)
reports/: monthly_memo_2026-03.html  monthly_memo_2026-03.md  recession_risk_report.md  recession_risk_summary.html
tests/: conftest.py  helpers.py  test_data_registry.py  test_event_metrics.py  test_expanded_models.py  test_labels.py  test_metrics.py  test_pipeline.py  test_realtime.py  test_reporting.py  test_transforms.py
(+44 files in other folders)
